# Anamorph

./: Cargo.toml  README.md
benches/: throughput.rs
benches/support/: common.rs
scripts/: plot_benchmarks.py
src/: ct.rs  errors.rs  hardening.rs  integrity.rs  lib.rs  padding.rs  params.rs
src/anamorphic/: decrypt.rs  encrypt.rs  keygen.rs  mod.rs
src/ec24/: double_key.rs  indicator.rs
src/normal/: decrypt.rs  encrypt.rs  keygen.rs  mod.rs
tests/: anamorphic_mode.rs  behavior_comparison.rs  coercion_simulation.rs  ec24_extensions.rs  normal_mode.rs
