[package]
name = "anamorph"
version = "0.1.0"
edition = "2021"
description = "Unsynchronized Robustly Anamorphic ElGamal — COMP6453 Applied Cryptography Project"
license = "MIT"
autobenches = false

[dependencies]
# Cryptographic big integers and prime tooling (incremental migration path)
crypto-bigint = { version = "0.7", default-features = false, features = ["alloc", "rand_core", "getrandom", "zeroize"] }
crypto-primes = { version = "0.7", default-features = false }

# Arbitrary-precision integers with random generation support
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"

# Cryptographically secure RNG
rand = "0.8"
getrandom = { version = "0.4", features = ["sys_rng"] }

# HMAC-SHA256 integrity (Owen's hardening layer)
hmac = { version = "0.13", features = ["zeroize"]}
sha2 = { version = "0.11", features = ["zeroize"] }

# Constant-time primitives (Owen's ct.rs)
subtle = "2.5"

# Standardized PKCS#7 padding algorithms
block-padding = "0.4"

# Secure memory zeroing
zeroize = { version = "1.7", features = ["derive"] }

# Memory-hard KDF for double-key derivation
argon2 = "0.5"

# Serialization for key/ciphertext transport
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "core"
harness = false

[[bench]]
name = "slow_setup"
harness = false

[[bench]]
name = "slow_search"
harness = false

[[bench]]
name = "slow_stream"
harness = false
